Added the references.

--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -432,12 +432,12 @@ permit progress on the proof but this particular avenue is left for future
 work
 
 Formalised efforts for proving cut elimination for other logics have adopted a
-deep embedding~\cite{??,??,??}, where sequents and derivations are represented
-explicitly rather than just the conclusion as in the shallow embedding adopted
-here. It is unclear whether the cut elimination theorem can be rescued in the
-current setting or not, but previous work suggests it is better to use other
-approaches. It is worth noting that \citeauthor{Tews:2013}'s Coq development
-significant; about 36,000 lines.
+deep embedding~\cite{Tews:2013,Dawson:2010,Dawson:2002}, where sequents and
+derivations are represented explicitly rather than just the conclusion as in
+the shallow embedding adopted here. It is unclear whether the cut elimination
+theorem can be rescued in the current setting or not, but previous work
+suggests it is better to use other approaches. It is worth noting that
+\citeauthor{Tews:2013}'s Coq development significant; about 36,000 lines.
 
 the locally nameless
 representation creates subgoals for which it is not clear how to prove. For
