--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -12,6 +12,46 @@
   note = {Unpublished},
   url = {http://www.cs.ru.nl/~james/RESEARCH/tfp2007.pdf},
 }
+@incollection{Tews:2013,
+ author={Tews, Hendrik},
+ title={Formalizing Cut Elimination of Coalgebraic Logics in Coq},
+ year={2013},
+ booktitle={Automated Reasoning with Analytic Tableaux and Related Methods},
+ volume={8123},
+ series={Lecture Notes in Computer Science},
+ editor={Galmiche, Didier and Larchey-Wendling, Dominique},
+ publisher={Springer Berlin Heidelberg},
+ pages={257-272},
+ language={English}
+}
+@incollection{Dawson:2010,
+ title={Generic Methods for Formalising Sequent Calculi Applied to Provability
+                  Logic},
+ author={Dawson, Jeremy E. and Gor\'{e}, Rajeev},
+ year={2010},
+ booktitle={Logic for Programming, Artificial Intelligence, and Reasoning},
+ volume={6397},
+ series={Lecture Notes in Computer Science},
+ editor={Ferm\"{u}ller, Christian G. and Voronkov, Andrei},
+ publisher={Springer Berlin Heidelberg},
+ keywords={provability logic; cut admissibility; interactive theorem proving;
+                  proof theory},
+ pages={263-277},
+ language={English}
+}
+@incollection{Dawson:2002,
+ title={Formalised Cut Admissibility for Display Logic},
+ author={Dawson, Jeremy E. and Gor\'{e}, Rajeev},
+ year={2002},
+ booktitle={Theorem Proving in Higher Order Logics},
+ volume={2410},
+ series={Lecture Notes in Computer Science},
+ editor={Carre\~{n}o, Victor A. and Mu\~{n}oz, C\'{e}sarA. and Tahar,
+                  Sofi\`{e}ne},
+ publisher={Springer Berlin Heidelberg},
+ pages={131-147},
+ language={English}
+}
 @inproceedings{Tov:2011,
  author = {Tov, Jesse A. and Pucella, Riccardo},
  title = {Practical Affine Types},
