Added the rest of GV's terms to figure.

--- a/paper/background.tex
+++ b/paper/background.tex
@@ -198,7 +198,7 @@ mechanised version would provide stronger guarantees of correctness and allow
 others to more easily alter proofs as a result of changes made to the
 language.
 
-\subsubsection{Fusion}
+\subsubsection{Fusion}\label{sec:fusion}
 
 A number of systems incorporate both a functional language surface syntax with
 a translation to a more primitive process calculus. I shall focus on two such
