--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -466,11 +466,11 @@ chosen.
 
 All types are amalgamated into one inductive definition and provide a
 predicate for restricting typing rules to consider only valid session
-types. As shown in \S~\ref{sec:...}, \citeauthor{Wadler:2014} defines GV types
-as a set of mutually recursive definitions. Unfortunately, handling mutually
-inductive definitions in Coq can be quite involved, requiring one to either
-rely on the Coq system to provide a stronger mutual induction principle or
-define one manually. Such a definition is possible, but it complicates
+types. As shown in \S~\ref{sec:fusion}, \citeauthor{Wadler:2014} defines GV
+types as a set of mutually recursive definitions. Unfortunately, handling
+mutually inductive definitions in Coq can be quite involved, requiring one to
+either rely on the Coq system to provide a stronger mutual induction principle
+or define one manually. Such a definition is possible, but it complicates
 applications of the induction principle.
 
 \input{wft}
