--- a/paper/cp-types-terms.tex
+++ b/paper/cp-types-terms.tex
@@ -7,13 +7,32 @@
           & \alt & A \otimes B & \key{times: output A then behave as B}\\
           & \alt & A \parr B & \key{par: input A then behave as B}\\
           & \alt & A \oplus B & \key{plus: select from A or B}\\
-          & \alt & \cdots &
+          & \alt & A \with B & \key{with: offer choice of A or B}\\
+          & \alt & ! A & \key{server accept}\\
+          & \alt & ? A & \key{client request}\\
+          & \alt & \exists X . B & \key{output a type}\\
+          & \alt & \forall X . B & \key{input a type}\\
+          & \alt & 1 & \key{unit for $\otimes$}\\
+          & \alt & \bot & \key{unit for $\parr$}\\
+          & \alt & 0 & \key{unit for $\oplus$}\\
+          & \alt & \top & \key{unit for $\with$}
   \end{array}
   \qquad
   \begin{array}{rclc}
     P,Q,R & \bnf & w \link x & \key{link}\\
           & \alt & \nu x \of{A}.(P \mid Q) & \key{par}\\
-          & \alt & \cdots &
+          & \alt & x[y].(P \mid Q) & \key{output}\\
+          & \alt & x(y).P & \key{input}\\
+          & \alt & x[\inlterm].P & \key{left selection}\\
+          & \alt & x[\inrterm].P & \key{right selection}\\
+          & \alt & x.\caseterm(P,Q) & \key{choice}\\
+          & \alt & !x(y).P & \key{server accept}\\
+          & \alt & ?x(y).P & \key{client request}\\
+          & \alt & x[A].P & \key{output a type}\\
+          & \alt & x(X).P & \key{input a type}\\
+          & \alt & x[].0 & \key{empty output}\\
+          & \alt & x().P & \key{empty input}\\
+          & \alt & x.\caseterm() & \key{empty choice}
   \end{array}
 \end{gather*}
 \caption{CP Propositions and Processes}
