--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -498,27 +498,41 @@ chosen representation and its effect on later expressiveness.
 \subsection{CPS translation from GV to CP}\label{sec:trans}
 
 Following the original work by \citeauthor{Wadler:2014}, the translation from
-GV to CP requires defining translations on types and terms of GV, which for
-terms is in continuation-passing style.
+GV to CP requires defining translations on types and terms of GV.
 
 \subsubsection{Types}
 
-The translation of from GV types to CP propositons is shown in Figure~\ref{??}
-\todo{Coq version or regular version?}. Translation of session types is
-noteworthy for taking a GV session type to its notional dual in CP, reflecting
-the semantic difference between channels in GV and those in CP.
+\input{gv-trans-types}
+
+The translation of from GV types to CP propositons is shown in
+Figure~\ref{fig:typtrans}. Translation of session types is noteworthy for
+taking a GV session type to its notional dual in CP, reflecting the semantic
+difference between channels in GV and those in CP. For GV, the type refers to
+the action on the channel endpoint. For CP, the proposition refers to the
+\textit{interface} exposed to a user of the channel. For example, output in GV
+corresponds to input in CP; the action on the channel endpoint is to output a
+value, and to do this the channel must input the value.
 
 \subsubsection{Terms}
 
-Due to the locally nameless representation, the translation of GV terms
-required type inference of terms to construct corresponding CP terms in order
-to specify the propositions. So, the translation takes the environment, in
-which the term was typed, as an argument to query the type of free
-variables. Unfortunately, this query returns a type of \coqe!option typ!
-(\coqe!option! is equivalent to \tm{Maybe} in Haskell) since it may not be
-found, but in fact since only well-typed GV terms are translated it is
-guaranteed to return something! Therefore, the definition is unnecessarily
-cluttered with impossible error cases.
+\input{gv-cps-cp}
+
+The translation of GV terms to CP processes is given, following
+\citeauthor{Wadler:2014}, using continuation-passing style. In this style a
+well-typed term in GV is parameterised by a name representing the channel
+which communicates the result of the translation (a CP process). Due to the
+locally nameless representation, the translation of GV terms required a
+procedure to infer the type of terms in order to specify the binding type for
+the corresponding CP process. An example, translating choice, is shown in
+Figure~\ref{fig:trans}, note that I am using \citeauthor{Wadler:2014}'s style
+but using an LNCQ notation for clarity. In order to construct the cut and
+output processes, the type of \tm{M} and \tm{N} must be computed. So, the
+translation takes the environment, in which the term is typed, as an argument
+to query the type of free variables. Unfortunately, this query returns a type
+of \coqe!option typ!  (\coqe!option! is equivalent to \tm{Maybe} in Haskell)
+since it may not be found, but in fact since only well-typed GV terms are
+translated it is guaranteed to return something!  Therefore, the definition is
+unnecessarily cluttered with impossible error cases.
 
 The term translation was initially designed using a monadic approach to
 account for the possible error cases in retreiving names from the
@@ -529,46 +543,40 @@ instances for basic Coq types. It is similar in style to Haskell's support for
 these objects. Unfortunately, this definition did not yield a suitable
 function to prove the translation well-typed because the function needs to be
 able to operate structurally on not only terms, but also the environment and
-the processes being constructed.
+the processes being constructed. Consider again the translation of case. here
+we require to consider nl and nr in a separate environment than m and type the
+resulting case term in the combined environment we also need to open these
+terms using cofinite quantification to yield a suitable induction
+principle. all told the function is not readily definable. further problems do
+arise as we shall see.
 
 An alternative formulation, which avoids the need to handle error cases, is to
 first define only the positive cases using an inductive type, the so-called
-\textit{graph relation}, and then define a dependent function which only
-considers the positive cases within the relation~\cite{McKinna:2009}. However,
-several issues were encountered when attempting to specify the
-translation. The graph relation requires much of the clutter present in both
-the \coqe!cp_rule! and \coqe!wt_tm! definition such as linear enviornments and
-cofinite quanitifcation.
-\begin{comment}
-i'm not sure about that but what is can i say so for example lets see see no i
-also have to thing about the general guidelines i can be giving for this
-section so we have something to say about guidelines do we yes of course we
-have can say that out of this we realised that it is important for a
-representation to be good enough to succintly express that which we wish to
-say in particular the graph relation the inductive type that we define
-propositionally is better one would think than the other way the monadic
-possible failure way is not producing a valid thing that we can inductively
-induct on so we concern ourself with the proof of translation preserving the
-typed term and i think it is important to remember the problem we had with the
-inductive hypothesis we had something do with translating the inner term of a
-weakening term in a larger context than the one we had available and that was
-to do with the destruction of the term inference thing i think no no it was
-something else we had the inner term and we had it well typed in an
-environment that was smaller sure and then our thing our function was saying
-we had some environment that typed both the inner term and the outer weakening
-term but we know that is wrong so wrong so here is perhaps where the inductive
-type graph relation thing wins out in that we can have a hypothesis for the
-inner term which is sufficiently small for the environment and we pattern
-match not only on the term but also on the environment yes that is we will do
-because it seems to work only when we get to the messy two the messy two
-constructor caases will this become a bigg problem inthat we will then have
-all this stuff about environment being split and needing to be recombined in
-the composite process that is a term not a process but the point still stands
-it will need to be about the term and the splitting is really a duplication of
-the unfortunately the well typed term relation but otherwise i cannot think
-how to reuse or obtain that information for the translation to cp
-\end{comment}
+\textit{graph relation}, and then define a dependent function that only
+considers the positive cases for which the relation is
+defined~\cite{McKinna:2009}. However, several issues were encountered when
+attempting to specify the translation. The graph relation requires much of the
+clutter present in both the \coqe!cp_rule! and \coqe!wt_tm! definition such as
+linear enviornments and cofinite quantification. the proof of cps translation
+using the graph relation is a work in progress. the main difficulty is that
+the representation requires opening both GV terms and CP processes in
+hypotheses which would appear to duplicate a lot of the overhead of their
+respective rule definitions.  again, representation is important even if the
+proof has still eluded us.  while it is remains to be seen whether or not the
+graph relation assists us in these matters it is nonetheless worth trying to
+express a property in multiple ways
+
 Roughly, the theorm aiming to prove is:
+\begin{coq}
+Theorem cps_trans_wt:
+  forall $\Phi$ M T z P $\Gamma$ $\GD$
+         (WT: $\Phi$ $\tpgv$ M$\of{T}$)
+         (NIN: z $\notin$ GVFV M $\cup$ dom $\Phi$)
+         (ENV: trans_env $\Phi$ = $\GD$)
+         (PER: Permutation $\Gamma$ ($\GD$ ++ z $\sim$ $\sem{T}$t))
+         (CP: transTm M $\Phi$ z P),
+    P $\tpcp$ $\Gamma$.
+\end{coq}
 
 \subsection{Issues and Guidelines}
 
@@ -581,20 +589,21 @@ the size of the proof context and complexity of the goal. There were cases in
 which the system crashed unexpectedly during interactive mode and it is
 conceivable that having many large proofs in-memory could be a contributing
 factor. For these reasons, the development is partitioned into GV and CP
-sections each with sub-divided into definition, infrastructure and typing
+sections each further sub-divided into definition, infrastructure and typing
 modules (CP also has an additional module for reduction lemmata). The CPS
 translation is also defined separately. Load time is considerably improved and
 the consequences of a crash are mitigated.
 
-\textbf{Representation.} It is important not to go overboard in the
-when developing not to use dependent types all the time without working out if
-it will be to the advantage of the prover use dependent types and other power
-with care for example we could don't want to use mutual inductive definitions
-for the types construct since this is overly complicated for what we wish to
-achieve and we don't want to index types with kinds since this complicates
-further definitions it is about trying to use dependent types responsibly
-without using them in an uncritical or thinking manner with great power comes
-great responsibility
+\textbf{Representation.} As discussed in the previous sections representation
+choice is a central issue in formalising programming language
+metatheory. Decisions on how to define, for instance, types, calculi and
+translations impact on future definitions and properties dependent on
+them. Considerations range from exploiting the full expressivity of the
+theorem prover by using dependent types in the case of Coq. to how to encode
+the properties of interest and being able to assess accurately the most
+fruitful encoding upfront. avoiding features that would provide a more faitful
+relationship between formal and informal systems is desirable if those
+features would unnecessarily complicated the reasoning. it is a tradeoff.
 
 \textbf{Library reuse.} One of the design goals of the development was to
 reuse existing libraries wherever possible. Two such instances proved
@@ -615,13 +624,13 @@ examples; the splitting of the environment was non-deterministic so required
 side-conditions to enforce a certain splitting of binders. For example the
 rule for associativity of cut. \todo{how to handle? is there a better way?}
 
-tactic performance is an issue to be addressed due to the slow proof search a
-future work (things like deciding equations on finite sets)
-
-Base rules and rules with binders required permutation assumptions to allow
-any ordering of the constituent contexts. a lot of the proofs for well-typed
-reductions involved small amounts of permuting environments which were largely
-similar across the proofs. while some simple lemmata and tactics where created
-to handle the most tedious elements these did not make effective use of
+\textbf{Effective Automation.} It is worth considering situations where
+automation would simplify proofs. Automation is already an important
+consideration in the interactive theorem proving community. Base rules and
+rules with binders required permutation assumptions to allow any ordering of
+the constituent contexts. a lot of the proofs for well-typed reductions
+involved small amounts of permuting environments which were largely similar
+across the proofs. while some simple lemmata and tactics where created to
+handle the most tedious elements these did not make effective use of
 hypotheses from the context. Improved proof search for permutations is
 required to simplify such developments.
