Fixed up GV figures.

--- a/paper/gv-cps-cp.tex
+++ b/paper/gv-cps-cp.tex
@@ -48,7 +48,7 @@ trans_case:
 \end{array}
 \end{math}
 \end{tabular*}
-\caption{Cut of server against client request: Coq version (left) and
+\caption{CPS translation for GV choice: Coq graph relation version (left) and
   \citeauthor{Wadler:2014}'s version (right).}
 \label{fig:trans}
 \end{figure*}
