--- a/paper/futurework.tex
+++ b/paper/futurework.tex
@@ -1,6 +1,8 @@
 \section{Future Work}
 
-Some areas of future work to look into would be the following.
+Some areas of future work to look into would be the following. The issues
+regarding cut elimination suggest there should be greater study into calculi
+based on the sequent calculus.
 
 \subsection{Besides Linear}
 
