--- a/paper/gv-trans-types.tex
+++ b/paper/gv-trans-types.tex
@@ -8,7 +8,7 @@ Fixpoint trans_types (T:typ) : prop :=
     | A $\with$ B => $\sem{A}$t $\oplus$ $\sem{B}$t
     | typ_oend => pp_bot
     | typ_iend => pp_one
-    | A $otimes$ B => $\sem{A}$t $\otimes$ $\sem{B}$t
+    | A $\otimes$ B => $\sem{A}$t $\otimes$ $\sem{B}$t
     | A $\lolli$ B => $\dualbt{\sem{A}t}$ $\parr$ $\sem{B}$t
     | A $\to$ B => !($\dualbt{\sem{A}t}$ $\parr$ $\sem{B}$t)
     | typ_unit => !$\top$
