--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,3 +1,10 @@
 \\~\\
 {\bf Acknowledgments.}
 This is optional; it is a location for you to thank people
+\begin{comment}
+Thanks to Simon Gay, my supervisor, for his advice project-related and
+otherwise; to Philip Wadler for provision of the GV/CP figures and discussions
+on this work; to the other members of the ABCD Scotland clan for their
+comments and suggestions; and to James McKinna for suggesting the use of the
+graph relation ``trick'' and other feedback on this work.
+\end{comment}
